testwallet/otapi.lisp


(cffi:defcfun ("OT_API_issueMarketOffer" OT_API_issueMarketOffer) :void
  (SERVER_ID :string)
  (USER_ID :string)
  (ASSET_TYPE_ID :string)
  (ASSET_ACCT_ID :string)
  (CURRENCY_TYPE_ID :string)
  (CURRENCY_ACCT_ID :string)
  (MARKET_SCALE :string)
  (MINIMUM_INCREMENT :string)
  (TOTAL_ASSETS_ON_OFFER :string)
  (PRICE_LIMIT :string)
  (bBuyingOrSelling :int))

(cffi:defcfun ("OT_API_PopMessageBuffer" OT_API_PopMessageBuffer) :string)

(cffi:defcfun ("OT_API_FlushMessageBuffer" OT_API_FlushMessageBuffer) :void)

(cffi:defcfun ("OT_API_Message_GetCommand" OT_API_Message_GetCommand) :string
  (THE_MESSAGE :string))

(cffi:defcfun ("OT_API_Message_GetSuccess" OT_API_Message_GetSuccess) :int
  (THE_MESSAGE :string))

(cffi:defcfun ("OT_API_Message_GetLedger" OT_API_Message_GetLedger) :string
  (THE_MESSAGE :string))


